...
// ----------------------------------------
// Global defaults
// ----------------------------------------

"defaults.ok"                               = "Ok";
"defaults.cancel"                           = "Cancel";
"defaults.done"                             = "Done";
"defaults.remove"                           = "Remove";
"defaults.back"                             = "Back";
"defaults.address"                          = "Address";
"defaults.next"                             = "Next";
"defaults.previous"                         = "Previous";
"defaults.delete"                           = "Delete";
"defaults.open"                             = "Open";

// ----------------------------------------
// MainTabbarNavigation.storyboard
...

"setup.loadingTor.subtitle"                 = "Privacy is our standard.";

// Welcome

"setup.welcome.message"                     = "Secure, anonymous and private iOS wallet for Verge. Send and Receive XVG.";
"setup.welcome.createButton"                = "Create a new wallet";
"setup.welcome.createDescription"           = "Create a new XVG wallet on your iOS device.";
"setup.welcome.restoreButton"               = "Restore your wallet";
"setup.welcome.restoreDescription"          = "Lost your iOS wallet? Restore it here.";

// Pin unlock

"setup.pinCode.title"                       = "Enter PIN to unlock";
"setup.pinCode.resetButton"                 = "Reset Wallet";

// Set wallet pin

"setup.pinCode.setPinTitle"                 = "Set wallet PIN";
"setup.pinCode.setPinDesc"                  = "Your wallet PIN will be used to open this app, and to send XVG with. If you forget it, you won't be able to access your wallet.";

// Re enter wallet pin

"setup.pinCode.reenterPinTitle"             = "Re-enter the PIN";

"setup.pinCode.reenterPinSucceedTitle"      = "Awesome!";
"setup.pinCode.reenterPinSucceedDesc"       = "Your PIN has now been set.";
"setup.pinCode.reenterPinSucceedDesc2"      = "Please don't forget it!";
"setup.pinCode.reenterPinSucceedButton"     = "Proceed";

"setup.pinCode.reenterPinErrorTitle"        = "Pin incorrect!";
"setup.pinCode.reenterPinErrorDesc"         = "Your Pin couldn't be validated!";
"setup.pinCode.reenterPinErrorDesc2"        = "Please try again.";
"setup.pinCode.reenterPinErrorButton"       = "Try again";

"setup.pinCode.alert.chooseSize"            = "Choose a PIN size";
"setup.pinCode.alert.digits"                = "Digits";

// Passphrase

"setup.passphrase.title"                    = "Derive your paper key with a passphrase";
"setup.passphrase.desc"                     = "Encrypting your paper key is an important safety measure. Make sure when restoring a wallet to use your previous passphrase.";
"setup.passphrase.req1"                     = "Min. 8 characters";
"setup.passphrase.req2"                     = "Uppercase and lowercase";
"setup.passphrase.req3"                     = "Special character (!.,-#€%&+#)";
"setup.passphrase.passPlaceholder"          = "Enter your passphrase";
"setup.passphrase.confirmButton"            = "Confirm";
...

"setup.finish.title"                        = "Almost ready!";
"setup.finish.switch1"                      = "I understand that my funds are held securely on this device.";
"setup.finish.switch2"                      = "I understand that if this app is moved to another device or deleted, my verge can only be recovered with the paper key and the pass phrase.";
"setup.finish.switch3"                      = "I have read, understood, and agree to the Terms of Use.";
"setup.finish.termsButton"                  = "Terms of Use";
"setup.finish.createButton"                 = "Create Wallet";
"setup.finish.openButton"                   = "Open your wallet";
"setup.finish.desc"                         = "Finishing up your wallet...";
"setup.finish.congrats"                     = "Your wallet is ready! Congratulations!";

// ----------------------------------------
// WelcomeGuide.storyboard
// ----------------------------------------

"welcomeGuide.paperKey.title"               = "Paper key";
"welcomeGuide.paperKey.message"             = "On the next screen, you'll be shown a list of words to write down on a piece of paper, which you should keep very safe!";
"welcomeGuide.paperKey.description"         = "Your paper key is part of your private key which is the only thing you need to access your funds.";
"welcomeGuide.paperKey.actionButton"        = "Write down paper key";
"welcomeGuide.paperKey.makeSureLabel"       = "To make sure everything was written down correctly, please enter the following words from your paper.";
"welcomeGuide.paperKey.submitButton"        = "Submit";

// ----------------------------------------
// Receive.storyboard
// ----------------------------------------

// Receive
...

// Restore wallet

"restoreGuide.restore.title"                = "Restore Wallet";
"restoreGuide.restore.desc"                 = "On the next screen, you'll need to fill in the paper key of your wallet in the exact same order as requested.";
"restoreGuide.restore.notice"               = "Please make sure no one is watching you during this process.";
"restoreGuide.restore.restoreButton"        = "Start Restoring";
"restoreGuide.restore.paperKeyTitle"        = "Your paper key:";
"restoreGuide.restore.paperKeyWarning"      = "Are you sure your paper key is correct?";
"restoreGuide.restore.paperKeyProceedButton"= "Proceed";

// Paperkey QR

"restoreGuide.qrcode.title"                 = "Scan a paper key QR code";
...
"wallet.slides.chart.low"                   = "Low";
"wallet.slides.chart.availability"          = "chart data only available in USD";
"wallet.slides.chart.noData"                = "History chart data can't be found.";

// TransactionsPlaceholderTableViewCell.xib

"wallet.slides.noTransactions.titleLabel"   = "No transactions received yet.";

// ----------------------------------------
// Alerts
// ----------------------------------------

"alerts.removeContact.title"                = "Remove contact";
...
