...
        updateIPAddress()
    }
    
    @IBAction func changeTorUsage(_ sender: UISwitch) {
        ApplicationManager.default.useTor = sender.isOn

        proceedButton.setTitle(sender.isOn ? "Proceed with Tor" : "Proceed without Tor", for: .normal)
        
        if sender.isOn {
            TorClient.shared.start {
                self.updateIPAddress()
            }
        } else {
...
